objects/Veda_Employer__c.object
<CustomObject>
    <fields>
        <fullName>Possible_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Possible Match</label>
        <referenceTo>Veda_Possible_Match__c</referenceTo>
        <relationshipName>Employers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipName>Employers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>first_Reported_Date__c</fullName>
        <label>first Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idReferences__c</fullName>
        <label>idReferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Reported_Date__c</fullName>
        <label>last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>occupation__c</fullName>
        <label>occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Employer</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Employers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>